--- a/spring/TrashAnalysisSystem/src/main/resources/templates/login.jade
+++ b/spring/TrashAnalysisSystem/src/main/resources/templates/login.jade
@@ -8,5 +8,4 @@ block content
             label(for=password) Password:
             input(type='password', value='', name='password')
         .form-group
-            input(type='submit', value='Login', name='submit')
-        include /csrf
+            input(type='submit', value='ログイン', name='submit')
