--- a/spring/TrashAnalysisSystem/src/main/resources/templates/partial/header.jade
+++ b/spring/TrashAnalysisSystem/src/main/resources/templates/partial/header.jade
@@ -3,12 +3,12 @@
 .nav-bar
 ul
     li
-        a(href="#") ホーム
+        a(href="/app/trashes/home") ホーム
     li
-        a(href="#") 一覧
+        a(href="/app/trashes/") 一覧
     li
-        a(href="#") ごみ登録
+        a(href="/app/trashes/new") ごみ登録
     li
-        a(href="#") 分析
+        a(href="/app/trashes/stat") 分析
     li
         a(href="#") 設定
