Complete: main methods

--- a/spring/TrashAnalysisSystem/src/main/resources/templates/layout/main.jade
+++ b/spring/TrashAnalysisSystem/src/main/resources/templates/layout/main.jade
@@ -5,9 +5,10 @@ html(lang="en")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         meta(http-equiv="X-UA-Compatible", content="ie=edge")
         link(rel='icon', href="assets/static/favicon.ico")
-        title Document
+        title ごみ捨て量記録システム
         block asset
     body
         block header
+            include /partial/header
         block content
         block footer
