--- a/spring/TrashAnalysisSystem/src/main/resources/templates/login.jade
+++ b/spring/TrashAnalysisSystem/src/main/resources/templates/login.jade
@@ -1,4 +1,5 @@
-extends layout
+extends /layout/main
+block header
 block content
     form(method='POST', action='/authenticate')
         .form-group
