--- a/spring/TrashAnalysisSystem/src/main/resources/templates/trashes/list.jade
+++ b/spring/TrashAnalysisSystem/src/main/resources/templates/trashes/list.jade
@@ -1,18 +1,1 @@
-extends /layout/main
-
-block content
-    table.ui.celled.striped.table
-        thead
-        tbody
-            for trash in trashes
-                tr
-                    td=trash.getDate()
-                    td=trash.getCategory()
-                    td=trash.getCapacity()
-                    td=trash.getWeight()
-                    td=trash.getMemo()
-                    td
-                        a(href="/app/trashes/#{trash.getId()}/edit") 編集
-                        form(action="/app/trashes/#{trash.getId()}", method="post")
-                            input(type="hidden",name="_method",value="delete")
-                            input(type="submit", value="削除")
+extends /layout/list_table
